--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,41 +4,35 @@
     {{msgAlerta}}
   </div>
 
-  <div class="card card-login mx-auto mt-5">
+  <div class="row">
 
-    <div class="card-header">
-      Autenticação
-    </div>
+    <div id="cardLogin" class="card mx-auto mt-5">
 
-    <div class="card-body">
-      <form #formLogin = "ngForm" (ngSubmit)="autenticar(formLogin);">
+      <div class="card-header">
+        Autenticação
+      </div>
 
-        <div class="form-group">
-          <label for="login">IDTel</label>
-          <input type="text" class="form-control" name="login" id="login" placeholder="Digite seu IDTel" [(ngModel)]="login" required/>
-        </div>
+      <div class="card-body">
+        <form #formLogin = "ngForm" (ngSubmit)="autenticar(formLogin);">
 
-        <div class="form-group">
-          <label for="senha">Senha</label>
-          <input type="password" class="form-control" name="senha" id="senha" placeholder="Digite sua senha" [(ngModel)]="senha" required/>
-        </div>
-
-        <div class="form-group">
-          <div class="form-check">
-            <label class="form-check-label">
-              <input type="checkbox" class="form-check-input"/>
-              Lembrar minha senha.
-            </label>
+          <div class="form-group">
+            <label for="login">IDTel</label>
+            <input type="text" class="form-control" name="login" id="login" placeholder="Digite seu IDTel" [(ngModel)]="login" required/>
           </div>
-        </div>
 
-        <button type="submit" class="btn btn-primary btn-block" [disabled] = "!formLogin.valid">Entrar no Sistema</button>
+          <div class="form-group">
+            <label for="senha">Senha</label>
+            <input type="password" class="form-control" name="senha" id="senha" placeholder="Digite sua senha" [(ngModel)]="senha" required/>
+          </div>
 
-        <div class="text-center">
-          <a href="#" class="d-block small mt-3">Esqueceu a senha</a>
-        </div>
+          <button type="submit" class="btn btn-primary btn-block" [disabled] = "!formLogin.valid">Entrar no Sistema</button>
 
-      </form>
+          <div class="text-center">
+            <a href="#" class="d-block small mt-3">Esqueceu a senha</a>
+          </div>
+
+        </form>
+      </div>
     </div>
   </div>
 </div>
