--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
       </div>
 
       <div class="card-body">
-        <form #formLogin = "ngForm" (ngSubmit)="autenticar(formLogin);">
+        <form #formLogin = "ngForm" (ngSubmit)="entrar();">
 
           <div class="form-group">
             <label for="login">IDTel</label>
